# UnionLoop

./: CMakeLists.txt  README.md
include/: analyze_loops.hpp  cfg.hpp  dfs.hpp  dom.hpp  fix_loops.hpp  union_find.hpp
src/: analyze_loops.cpp  cfg.cpp  dfs.cpp  fix_loops.cpp
test/: test_expected.hpp  test_fixtures.cpp  test_fixtures.hpp  test_loops.cpp
